nobase_include_HEADERS = \
    libpbkdf2-compute-cpu/device.h \
    libpbkdf2-compute-cpu/globalcontext.h \
    libpbkdf2-compute-cpu/hashfunctioncontext.h \
    libpbkdf2-compute-cpu/computecontext.h \
    libpbkdf2-compute-cpu/devicecontext.h \
    libpbkdf2-compute-cpu/processingunit.h \
    libpbkdf2-compute-cpu/types.h
