nobase_include_HEADERS = \
    libpbkdf2-compute-opencl/cl.hpp \
    libpbkdf2-compute-opencl/opencl.h \
    libpbkdf2-compute-opencl/device.h \
    libpbkdf2-compute-opencl/hashfunctioncontext.h \
    libpbkdf2-compute-opencl/computecontext.h \
    libpbkdf2-compute-opencl/devicecontext.h \
    libpbkdf2-compute-opencl/processingunit.h \
    libpbkdf2-compute-opencl/globalcontext.h \
    libpbkdf2-compute-opencl/types.h
